--- a/DisplayAMap.html
+++ b/DisplayAMap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-CA">
 <head>
 <title>ArcGIS Maps SDK for JavaScript Tutorials: Display a map</title>
 <meta charset="utf-8" />
