--- a/KamsMap.html
+++ b/KamsMap.html
@@ -40,11 +40,11 @@ h2 {
   margin:0;
   padding:30px;
 }
-map {
+/* map {
   display: inline;
   padding: 20;
   align-items: center;
-}
+} */
 </style>
 
 <!-- Create headers and subheader descriptions -->
@@ -237,7 +237,8 @@ map {
   // });
   // graphicsLayer.add(polylineGraphic);
 
-});
+
+// });
 </script>
     
 <body>
