--- a/KamsMap.html
+++ b/KamsMap.html
@@ -63,7 +63,7 @@ h2 {
   function(esriConfig, Map, MapView, Graphic, GraphicsLayer, route, RouteParameters, FeatureSet) {
     esriConfig.apiKey = "AAPKd86bf16d5fbb4fd18e87ffcc73429eb3g9mp9I81MJNKoD74jWp6YDS5XwHbpIgorzVBrRTGgTfexXNUPvRmIumwHnK0aWUu";
     const map = new Map({
-      basemap: "arcgis-navigation" // Basemap layer service
+      basemap: "arcgis-topographic" // Basemap layer service
     });
    
     // Ceneter the map and set the zoom level
@@ -84,7 +84,7 @@ h2 {
     paths: [
       [43.505986,-79.9417333] // First Workplace - Glen Eden Ski and Snowboard Learning Center 43.505986,-79.9417333
       [43.6484699,-79.9027417] // Second Workplace - Sportcheck Georgetown
-      [43.5079351,-79.9423384] // Third Workplace - Kelso Conservation Area
+      [43.5079351,-79.9423] // Third Workplace - Kelso Conservation Area
       [43.5764387,-79.8320889] // Fourth Workplace - Tommy Hilfigure Toronto Premium Outlets
       [43.650538,-79.9102907]  // Fifth Workplace - Real Canadian Superstore Georgetown
       [43.5872784,-79.9046279] // Sixth Workplace - Dr Bug Urban Pest Control Georgetown
