--- a/KamsMap.html
+++ b/KamsMap.html
@@ -81,15 +81,17 @@ h2 {
   // crete a new graphics layer - point
   const point = { //Create a point
     type: "point",
-    paths: [
-      [43.505986,-79.9417333] // First Workplace - Glen Eden Ski and Snowboard Learning Center 43.505986,-79.9417333
-      [43.6484699,-79.9027417] // Second Workplace - Sportcheck Georgetown
-      [43.5079351,-79.9423] // Third Workplace - Kelso Conservation Area
-      [43.5764387,-79.8320889] // Fourth Workplace - Tommy Hilfigure Toronto Premium Outlets
-      [43.650538,-79.9102907]  // Fifth Workplace - Real Canadian Superstore Georgetown
-      [43.5872784,-79.9046279] // Sixth Workplace - Dr Bug Urban Pest Control Georgetown
-      [43.736374,-79.6554973] // Seventh Workplace - Brandt Positioning Technology
-    ]
+    longitude: -79.8834278,
+    latitude: 43.6315248
+    // paths: [
+    //   [43.505986,-79.9417333] // First Workplace - Glen Eden Ski and Snowboard Learning Center 43.505986,-79.9417333
+    //   [43.6484699,-79.9027417] // Second Workplace - Sportcheck Georgetown
+    //   [43.5079351,-79.9423] // Third Workplace - Kelso Conservation Area
+    //   [43.5764387,-79.8320889] // Fourth Workplace - Tommy Hilfigure Toronto Premium Outlets
+    //   [43.650538,-79.9102907]  // Fifth Workplace - Real Canadian Superstore Georgetown
+    //   [43.5872784,-79.9046279] // Sixth Workplace - Dr Bug Urban Pest Control Georgetown
+    //   [43.736374,-79.6554973] // Seventh Workplace - Brandt Positioning Technology
+    // ]
   };
 
   const simpleMarkerSymbol = {
