--- a/KamsMap.html
+++ b/KamsMap.html
@@ -63,7 +63,7 @@ h2 {
   function(esriConfig, Map, MapView, Graphic, GraphicsLayer, route, RouteParameters, FeatureSet) {
     esriConfig.apiKey = "AAPKd86bf16d5fbb4fd18e87ffcc73429eb3g9mp9I81MJNKoD74jWp6YDS5XwHbpIgorzVBrRTGgTfexXNUPvRmIumwHnK0aWUu";
     const map = new Map({
-      basemap: "arcgis-topographic" // Basemap layer service
+      basemap: "arcgis-navigation" // Basemap layer service
     });
    
     // Ceneter the map and set the zoom level
